feat(web): use YAML config.yml for runtime env mapping
- convert web/config.yml to standard YAML
- load js-yaml before runtime bootstrap and parse config.yml as YAML
- keep strict validation + fail-fast errors
- CI: make ci

--- a/web/login/index.html
+++ b/web/login/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg&#43;xml;utf8,%0a%20%20%3csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20256%20256%22%3e%0a%20%20%20%20%3crect%20fill=%22%230A2540%22%20x=%220%22%20y=%220%22%20width=%22256%22%20height=%22256%22%20rx=%2228%22%20ry=%2228%22/%3e%0a%20%20%20%20%3cpath%20stroke=%22%23D4AF37%22%20fill=%22none%22%20stroke-width=%2210%22%20stroke-linejoin=%22round%22%0a%20%20%20%20%20%20d=%22M%2032%20128%20C%2072%2056,%20184%2056,%20224%20128%20C%20184%20200,%2072%20200,%2032%20128%20Z%22/%3e%0a%20%20%20%20%3ccircle%20cx=%22128%22%20cy=%22128%22%20r=%2248%22%20stroke=%22%23D4AF37%22%20fill=%22none%22%20stroke-width=%228%22/%3e%0a%20%20%20%20%3cpath%20stroke=%22%23D4AF37%22%20fill=%22none%22%20stroke-width=%228%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22%0a%20%20%20%20%20%20d=%22M%2096%20128%20C%2096%20108,%20128%20108,%20128%20128%0a%20%20%20%20%20%20%20%20%20C%20128%20148,%20160%20148,%20160%20128%0a%20%20%20%20%20%20%20%20%20C%20160%20108,%20128%20108,%20128%20128%0a%20%20%20%20%20%20%20%20%20C%20128%20148,%2096%20148,%2096%20128%22/%3e%0a%20%20%3c/svg%3e" />
     <script id="landing-widget-script" defer></script>
     <script id="tauth-script" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
     <script src="/runtime-env.js"></script>
     <script>
       // @ts-check
